2010-12-26 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-map.c:
    Removed dead code in coordinate conversion (it was nonsense anyway).

2010-12-10 Charles Suprin <hamaa1vs at gmail.com>

    * data/locations.dat
    Add entries to locations.dat and add state to Mexican locations.

2010-11-25 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Move rotor to end of pass if below horizon and after current pass

2010-11-24 Alexandru Csete <oz9aec at gmail.com>

    * src/Makefile.am:
    Fixed PACKAGE_LOCALE_DIR.


2010-11-23 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    * src/gtk-rig-ctrl.c
    Close socket in gtk-rig/rot-ctrl when window closes if applicable.

2010-11-11 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Change error checking in set_pos

2010-11-07 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Updated pass regeneration logic in rotator controller.
    Fixes bug 2167508: problems in rotator controller.

    * data/locations.dat
    Added locations in Malaysia, Indonesia, the Philippines, and Kiribati from US/NOAA Metar database.
    Addresses Feature Request 3022617: Malaysia's location.

2010-11-07 Alexandru Csete <oz9aec at gmail.com>

    * configure.ac:
    Added implicit check for libm (required on Fedora core 13 and later).


2010-11-06 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Added checks on g_strsplit in get_pos

    * src/predict-tools.c
    get_current_pass now works on copy of sat_t structure
    to address bug 3099314

2010-11-05 Charles Suprin <hamaa1vs at gmail.com>

    * src/predict-tools.c
    get_pass and get_pass_no_min_el now work on copies of sat_t structure
    to address bug 3099314

    * src/gtk-rot-ctrl.c
    Update is_flipped_pass to handle pass with no details

2010-11-01 Charles Suprin <hamaa1vs at gmail.com>

    * src/orbit-tools.c
    Corrected fixme inside decayed.

    * src/gtk-rig-ctrl.c